дополнение к классу Pawn устранение проблемы ходов пешки при начальном ее положении